// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create Environment with devTools 1`] = `
RelayModernEnvironment {
  "__setNet": [Function],
  "_debugger": EnvironmentDebugger {
    "_envIsDirty": false,
    "_environment": [Circular],
    "_id": "RelayModernEnvironment2",
    "_isRecordingMutationEvents": false,
    "_recordedMutationEvents": Array [],
  },
  "_network": Object {
    "execute": [Function],
  },
  "_publishQueue": RelayPublishQueue {
    "_appliedOptimisticUpdates": Set {},
    "_backup": Object {},
    "_handlerProvider": [Function],
    "_pendingBackupRebase": false,
    "_pendingData": Set {},
    "_pendingOptimisticUpdates": Set {},
    "_pendingUpdaters": Set {},
    "_store": RelayMarkSweepStore {
      "_hasScheduledGC": false,
      "_index": 0,
      "_recordSource": Object {},
      "_roots": Map {},
      "_subscriptions": Set {},
      "_updatedRecordIDs": Object {},
    },
  },
  "_store": RelayMarkSweepStore {
    "_hasScheduledGC": false,
    "_index": 0,
    "_recordSource": Object {},
    "_roots": Map {},
    "_subscriptions": Set {},
    "_updatedRecordIDs": Object {},
  },
  "configName": undefined,
  "unstable_internal": Object {
    "areEqualSelectors": [Function],
    "createFragmentSpecResolver": [Function],
    "createOperationSelector": [Function],
    "getDataIDsFromObject": [Function],
    "getFragment": [Function],
    "getOperation": [Function],
    "getSelector": [Function],
    "getSelectorList": [Function],
    "getSelectorsFromObject": [Function],
    "getVariablesFromObject": [Function],
  },
}
`;

exports[`should create default Environment 1`] = `
RelayModernEnvironment {
  "__setNet": [Function],
  "_debugger": EnvironmentDebugger {
    "_envIsDirty": false,
    "_environment": [Circular],
    "_id": "RelayModernEnvironment1",
    "_isRecordingMutationEvents": false,
    "_recordedMutationEvents": Array [],
  },
  "_network": Object {
    "execute": [Function],
  },
  "_publishQueue": RelayPublishQueue {
    "_appliedOptimisticUpdates": Set {},
    "_backup": Object {},
    "_handlerProvider": [Function],
    "_pendingBackupRebase": false,
    "_pendingData": Set {},
    "_pendingOptimisticUpdates": Set {},
    "_pendingUpdaters": Set {},
    "_store": RelayMarkSweepStore {
      "_hasScheduledGC": false,
      "_index": 0,
      "_recordSource": Object {},
      "_roots": Map {},
      "_subscriptions": Set {},
      "_updatedRecordIDs": Object {},
    },
  },
  "_store": RelayMarkSweepStore {
    "_hasScheduledGC": false,
    "_index": 0,
    "_recordSource": Object {},
    "_roots": Map {},
    "_subscriptions": Set {},
    "_updatedRecordIDs": Object {},
  },
  "configName": undefined,
  "unstable_internal": Object {
    "areEqualSelectors": [Function],
    "createFragmentSpecResolver": [Function],
    "createOperationSelector": [Function],
    "getDataIDsFromObject": [Function],
    "getFragment": [Function],
    "getOperation": [Function],
    "getSelector": [Function],
    "getSelectorList": [Function],
    "getSelectorsFromObject": [Function],
    "getVariablesFromObject": [Function],
  },
}
`;
